feat: project build
